Fixed nav bar covering div title, but not working on large tablets. Also changed the padding in the contact section and submit size to give a cleaner look

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.google.com/specimen/Lato');
 
 html {
-  font-family:"Lato", ;
+  font-family:"Lato";
+  scroll-padding-top: 100px;
 }
 
 * {
@@ -31,7 +32,6 @@ a {
 #header-img {
   margin: 10px 0 10px 10px;
   display: inline;
-  width:;
 }
 
 #nav-bar {
@@ -202,7 +202,8 @@ a {
 
 #Contact {
   width: 100%;
-  height: 200px;
+  height: 230px;
+  padding: 10px;
   background: linear-gradient(to right, #000000 0%, #121212 50%, #000000 100%);
   background-size: 100% 100%;
   background-position: 50% 100%;
@@ -213,12 +214,12 @@ a {
 
 #Contact h2 {
   font-size: 2rem;
-  padding: 10px 0;
-  margin: 10px 0 10px 0;
+  padding: 0.5rem 0;
 }
 
 #Contact p {
   font-size: 1.5rem;
+  padding: 0.5rem;
 }
 
 #form {
@@ -226,7 +227,7 @@ a {
   margin-top: -2em;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr;
-  grid-gap: 10px;
+  grid-gap: 0.7rem;
 }
 #email {
   display: block;
@@ -237,8 +238,9 @@ a {
 
 #submit {
   display: block;
-  width: 20%;
-  margin: 0 40% 0 40%;
+  width: 5rem;
+  height: 2rem;
+  margin: auto;
   background: #9b0927;
   color: white;
   border-radius: 2px;
@@ -382,9 +384,9 @@ a {
     font-size: 1rem;
   }
   #submit {
-  
-  width: 30vw;
-  margin: 0 35vw 0 35vw;
   font-size: 0.8em;
+  }
+  #social span {
+    margin: auto;
   }
 }
